login/register backend basic

--- a/warehouse-management/src/Warehouse.Api/Warehouse.Api.csproj
+++ b/warehouse-management/src/Warehouse.Api/Warehouse.Api.csproj
@@ -21,4 +21,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Warehouse.Application\Warehouse.Application.csproj" />
+    <ProjectReference Include="..\Warehouse.Infrastructure\Warehouse.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
