--- a/warehouse-management/src/Warehouse.Api/appsettings.json
+++ b/warehouse-management/src/Warehouse.Api/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=db_warehouse;Username=postgres;Password=minimajk11"
+  },
+  "JwtSettings": {
+    "Secret": "your-super-secret-key-minimum-32-characters-long-for-security-purposes",
+    "Issuer": "WarehouseApi",
+    "Audience": "WarehouseClient",
+    "ExpiryMinutes": 60
   }
 }
