--- a/warehouse-management/src/Warehouse.Application/Warehouse.Application.csproj
+++ b/warehouse-management/src/Warehouse.Application/Warehouse.Application.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="MediatR" Version="13.1.0" />
     <PackageReference Include="FluentValidation" Version="12.1.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.10.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.10" />
   </ItemGroup>
